--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "Programming Languages",
     "Formatters"
   ],
-  "main": "./out/extension.js",
+  "main": "./out/main.js",
   "activationEvents": [
     "onLanguage:python",
     "onLanguage:mardown"
