--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
       {
         "command": "extension.pythonfunctiondeleter",
         "title": "remove python function/class"
-      },      
+      },
       {
         "command": "extension.pythonfunctionduplicate",
         "title": "duplicate python function/class"
@@ -43,7 +43,7 @@
       {
         "command": "extension.movecurrentlinetorighteditor",
         "title": "move current line to right editor",
-        "icon":{
+        "icon": {
           "dark": "images/right-light.svg",
           "light": "images/right-light.svg"
         }
@@ -88,10 +88,12 @@
     "@types/vscode": "^1.87.0",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
-    "@vscode/test-cli": "^0.0.6",
-    "@vscode/test-electron": "^2.3.9",
     "dt-python-parser": "^0.9.0",
     "eslint": "^8.56.0",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@vscode/test-cli": "^0.0.9",
+    "@vscode/test-electron": "^2.3.9"
   }
 }
